--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.13",
+    "rc-slider": "^11.1.8",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.2.5"
