--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "axios": "^1.8.4",
     "next": "14.2.13",
+    "prisma": "^6.6.0",
     "rc-slider": "^11.1.8",
     "react": "^18",
     "react-dom": "^18",
