--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^6.7.0",
     "@prisma/client": "^6.7.0",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
     "next": "14.2.13",
     "pg": "^8.15.6",
