--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rc-slider": "^11.1.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.56.2",
     "react-hot-toast": "^2.5.2",
     "swiper": "^11.2.5"
   },
