--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
+    "js-cookie": "^3.0.5",
     "next": "14.2.13",
     "pg": "^8.15.6",
     "rc-slider": "^11.1.8",
@@ -21,6 +22,7 @@
     "swiper": "^11.2.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
